# ChangeLog for media-sound/lilypond
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.172 2014/01/01 20:23:06 radhermit Exp $

*lilypond-2.18.0 (01 Jan 2014)

  01 Jan 2014; Tim Harder <radhermit@gentoo.org> +lilypond-2.18.0.ebuild:
  Version bump.

*lilypond-2.17.97 (11 Dec 2013)

  11 Dec 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.97.ebuild,
  lilypond-9999.ebuild:
  Version bump, update live ebuild.

*lilypond-2.17.96 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.96.ebuild:
  Version bump, fix metapost deps (bug #489804).

*lilypond-2.17.95 (06 Nov 2013)

  06 Nov 2013; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.28.ebuild,
  -lilypond-2.17.29.ebuild, +lilypond-2.17.95.ebuild:
  Version bump and remove old.

  27 Oct 2013; Tim Harder <radhermit@gentoo.org> -lilypond-2.14.2.ebuild:
  Remove old.

*lilypond-2.17.29 (27 Oct 2013)

  27 Oct 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.29.ebuild:
  Version bump.

  20 Oct 2013; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.23.ebuild,
  -lilypond-2.17.24.ebuild, -lilypond-2.17.25.ebuild, -lilypond-2.17.26.ebuild:
  Remove old.

*lilypond-2.17.28 (20 Oct 2013)

  20 Oct 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.28.ebuild:
  Version bump.

*lilypond-2.17.26 (27 Sep 2013)

  27 Sep 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.26.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> lilypond-2.16.2.ebuild,
  lilypond-2.17.23.ebuild, lilypond-2.17.24.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> lilypond-2.16.2.ebuild:
  Stable for x86, wrt bug #441398

  31 Aug 2013; Agostino Sarubbo <ago@gentoo.org> lilypond-2.16.2.ebuild:
  Stable for amd64, wrt bug #441398

*lilypond-2.17.25 (29 Aug 2013)

  29 Aug 2013; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.25.ebuild,