@@ -5,26 +5,20 @@ AUX 50lilypond-gentoo.el 258 SHA256 4d8d78c7f08103d0708b0f00638a66496db4b8d2e7d1
 AUX lilypond-2.16.0-tex-docs.patch 620 SHA256 bc13387a935bd2c2208abdef02c9045ea813f671ac65aa571bf510482e1e2712 SHA512 4db780b1adfd080617b93a9edc95a68f36edc45fdc5015c1ccfbfb7160bd3779ea8fd4c035840cec8d59ad6ebd04271ecd2db4dd366e1ebd59d3ce459b4eddd2 WHIRLPOOL a63e48a45f75d9a8abde7f419fc8ebc27079ed4ef0685ae88d25d2f0bc7d836bfa0fc35f2ba08a6f84654d9a599d886f9427ad9d2e4448aee31ddce112144a9f
 AUX lilypond-2.17.2-tex-docs.patch 608 SHA256 ca43b5633f3ee85748d5f0f43814b144ec4e0779961a9a802d45b551694d75e0 SHA512 fe22e649e12ba1aacf05dab14b1820d636d58dce252832331577935db2c0e565b3ec6073c6bec11a05a4c1254ddd1495252e6b3e41623e290363eb124e7fa6c1 WHIRLPOOL bdf4d95c108966e144946abb31dd5acd57102db08a410b51b562e250a0676466d8208090c880f6018bed45ac3b332acd3f66e7337cd036e5b66ee72f939c9779
 DIST lilypond-2.16.2.tar.gz 16062982 SHA256 1f4326cf8f9363076a83ce3cbe35f747188084f7492000ed3a7ccc3ce60aa1cb SHA512 3ead74ddb7e51be274aa5aa607b776261ae5d0e9863ebe745451875e62a60fac2376f7e80546df66010cdec2752c271e7006275608f30ce9a2d1b88f22dc1d8d WHIRLPOOL a25539dac5e508220e1ddeeaed261b730e76fd26c5dbc0f97683b65bcbc5907ef6bfbe8c16a7f6a15d12950d4a7d547ee1716e25cdfb5b750e235c913a8ef38e
-DIST lilypond-2.17.95.tar.gz 15960245 SHA256 5f286112624ed3d8c52b6d3776651ad88c2fd6c08b3f1d0049101d37488a3db4 SHA512 468e08453b2ab05594fc785bfc6995d418adab6d5ebec53361dfbee0d5b6cb82e296c83de6b1217b683c93525a0e775eabda43f1e10737114c5f18e3f12be766 WHIRLPOOL 0f9925debf113b361b28491e1dc9bf6075017ce11bac7fd36969f824287b2271387a75f795978e6e90f302480a243ac16b39285179f2dc8f89cd4c2aad0332fd
-DIST lilypond-2.17.96.tar.gz 15965830 SHA256 c0dda829ebbe637ec9fee27c47928a2cc934a2b363e761040b0e04d9e4e97a3c SHA512 cb51b84b16a33d5583cec940f8978fb3526535917a288c101d13cfcbaad08a71b9dc4583be36559b5435a5228d092e457adc277b37ca511c548f0afd16e43136 WHIRLPOOL 7a9fd2150e0f8fe796f8be6cfb8d005809127255221a8af1f154b8b6369b695d205174deb91bae14d1f68ba0099c26e81671b5c97b7048629bac574a98be70a6
-DIST lilypond-2.17.97.tar.gz 15982053 SHA256 ca8d1bc03f35399d40f768d773282e44c903a6315669d0cd385fb0c473d4aebf SHA512 31988f101f7c9f5f5c986f349405628cbbc6621499b628aa0bf256d535f20816919e4f11f99cea21ef7cf2e9f3dc28691e60cfafa92f1a0b3ce4cc53ec8bfe75 WHIRLPOOL 49a74d307fb196d196050832eadce4bd4d2e11eae24c1cb1e79ce62a7a02b65d3ef03a18e1980b0d68c8b281ab4fbea82f5b13869f189515257c76cf0527f410
 DIST lilypond-2.18.0.tar.gz 16013863 SHA256 89059139a560a4900305b52d9327969cfcdedb061ed7bae310fdf5d4ba2aa230 SHA512 17d758688ac0c7f9e654e0157cd55ec9e9310d70392109c1edd666c1dc33e1ac9682eb1c18e678d018181c7d7dc916a62c6cc49e3c66c5c940bd2634e0d2e3bb WHIRLPOOL 2db89015daa41fcee21f435bf3e9d86edcb9c52e278ab482be7ba3cd5a046b65be312e1c9702ee16080045b70ac3fa1757965a7586384af0485f4b3a43486a30
 EBUILD lilypond-2.16.2.ebuild 2560 SHA256 2e8712a0e9255175019eccbe036b9d59b66adffb2dac72e449208342d5b76928 SHA512 ab5adb4f15cfb188ea50ef2bb9c2b04de5591e143e5787ec0f2f74268008c67a4dc4b3afcb4435df3fb033b5635fa37a1e55c234234dabaf65ba30dbfd93c176 WHIRLPOOL d1096e66c7cc0d154edfc82bccb1393aaae42dc0257317ba99b5d50ab03babf5e4ec1ec6574b136b78bcf138e4e12b5299cd7ac3995062c7bde3b026b5620c1f
-EBUILD lilypond-2.17.95.ebuild 2665 SHA256 1b1c9298496709e27cf3e9ccf5d43b5613d15e191aa38c1bea94ecda92fce934 SHA512 6951e83de272ae202f340093cf75d9458071c1cafe8a475f2e7d63231e56ceb22d96b09814a292bcf5182eb6d6c347067a2b8277ba151141c8cc08325b44c5c9 WHIRLPOOL e273496833a5f3f52399530c123d298ac6859467c44bfd5fc528c05874a016ec071c412b5cf7e36810860644056503d0242b727161c778407c40748c7bf3b7cb
-EBUILD lilypond-2.17.96.ebuild 2703 SHA256 f7614e7058e7e4eaa6ad02ebd748b8c7b9e68af8095c9216bdd931062d1d4505 SHA512 3ecbcb17a646d52321e8f674533c1177112394c98cc73e0d38fa67df6e711747bef7528ed7c6a2f3af2e663e61b904410164f1c3b5f32c62247262a7be9edd48 WHIRLPOOL de7228ed322bad6e105e26301d7ba217b24c8705d2deb5e0ee1a531e1c891de637a7a5d01ea7087171592b6b30c2c69a240bb25486c0ca2f1ee0b706adeff092
-EBUILD lilypond-2.17.97.ebuild 2703 SHA256 94ebc6fbd0bc7b5eb46b8cce573461fc14746e80973d1499df90c51a8b059c35 SHA512 d76a799806b79ead1654af71af69b1e602ca2003d986dad01720e18df1ac03923ad49a4cbaf037da4f73f33d529ec2cd780bb25df05f84d981ea9df053443672 WHIRLPOOL 291a0f7ebe1b645bd9dba5ffcca4da1c3d4f494aadebd917fac04ec0f9d12c4db700fdd1669ec3917fe31f494b268471cfd0451760994bd833321cdac6507b93
 EBUILD lilypond-2.18.0.ebuild 2702 SHA256 6625f0b22b34438c037562a449bba01ca4bc5f7b9f30ce8d287e37e99ed501c4 SHA512 ae3cb255fb61292e6635b7bfc4ed55e2ac086ebcfadb718eb15d97fdf67910feb1313a5303fb7c52dc169818954f0a99884b4a364a200025738477174a75b019 WHIRLPOOL 65a2368b4bf882d7923d99816fbaaff9920e6608db1122e2695b50cffd6bfa2a04161efc929f81146dcd819b011c700d05e970e959d0b9bc54648920add51d36
 EBUILD lilypond-9999.ebuild 2575 SHA256 427065c30ccbd656885f5892560bb07fa3a6f6fc7288dc78708356c2097b1da8 SHA512 f57f7eeb5fb0fc273d3beea193fc358bbf2600e870c144ef0c7bcdded903b61692095c8f7db038eb556079868a942092b05bf9cd5f651aec5995914b97029f67 WHIRLPOOL 29f0be293fcc61aa3e45145b782bf3342f8cd3c86494631fbc391fd4632de7c0e678d06b6270d69ccceea4364bd382042bcdf10ce06c8331a4f9538cb6259b15
-MISC ChangeLog 27328 SHA256 3e0b8a8aa94857c382d15517e2b803cd92f32501119e5eba4608ed54bcff10fd SHA512 ae33dd54fe6342817c0b74cef59533a774daebc2a8122ba10b0d7fc26eaf63247c8bc9997579a0104f94ba327e603b2f296af1a633664ee4c44410d5dd506435 WHIRLPOOL dc778b30478d4d40f15c8d36811d798c885b7a0235683b83b7cd3d8e87ff83e63972cdacb2a2c7ac89e189c8f18c2eea4ec813a103943e3725882dc3527c7144
+MISC ChangeLog 27472 SHA256 ded98c628ffa7e4d713c3905ef2976595dd42cc2a3f723035dde7271ddcdc4bb SHA512 52f37d68569b109cacc7c0182a84da49094168afac69ae323ade9c41cf4ca9230ca5340d37ba74235b79d31ec302ef65d068c5801cba701370c4b244edef51a6 WHIRLPOOL c872fe86277d453dcf50f27b758ad84295a59685554fe8172253ad6cd57eb172d8e683f92b9969e272d2e1a76ecc7c11091e55713d2dbb52785ff03d52d53aa5
 MISC metadata.xml 534 SHA256 9d9d5dba892fde9a346843a9cacaeac7ce9236f643d1c0f778333cc65181a025 SHA512 711b4d7ff31d686c01cc9f67bbd84bd69da5a955e60a759b814a9379d20079061d019a53da9906a75a4a408654307406eef99129655fb38a21953eaf209215e1 WHIRLPOOL 87cddb2db014ae47a3e2408fb696fcce7118632a8574d0b8be21ef603d3ecdc4714f2736a7a3388fc907e6b2b984feabca1f77b603e34ff1477920260cb696b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSxHkrAAoJEEqz6FtPBkyjEucH/3MsPhMn6sR5JS4+RP/WqYos
-Idky3JHm3ZlQZW+0ephf4TdkU2LAxQ5QVl7rp0SdN72+tss9/phka+ZL9kCn7ur0
-H361zkUQ8jjPKOoBhSOuyoTh6Ap2OQ6q7tmPjc71tUBTCL0zmpZVVl+MVDEjpCaS
-LKZ2/Nh6QVlw1X14NoZG+inkF8wkWeA/93dzJ9oewPN2RXJEP9LRt7By/VxAQW7h
-QPZ7XH2yGOWvkFrBuCrOIgkkhi99kZyp3CWTJuJrbpkFK/AcQmcIT0zfd9KpVXb1
-GEhIP0XXK0uffdROQXmlyKsiaNLZckprqb19392R8k+k5/j69uqy9jn9ShGICl8=
-=pxUp
+iQEcBAEBCAAGBQJSxHlfAAoJEEqz6FtPBkyjBKsH/338mJyl9ndgNjPtz0OR3h1p
+RFzpc/7aPHw7+2SI4clhKlcZ4gihGQBQpEiVudiD88uOi3k/s7mx7tbRfTw1jiQ3
+UuzZsN/Zk+3WuVe7fSBSNzmCywa13+Q+ioXOO8P5lOku04+RYLYvD+3fzJbcBy23
+3PviCKfhmQPe/sFsW6d/uEa1U6yD/jP6HBGh44HrSnIi4V0JeZj4kdz0c1Z3K3Y+
++Q7qbJrC70b8cCin8N4Xm0ls9Vi71eXlSjOtdOiIxIXgrVNYllxmMigYHln5NVqc
+/DOKrmbVWc6NtYiEpS6au8uJ9N9cCfGU86Fbt+kssxyJOnsjSC1I9VYJ6uHEAvM=
+=p1Gh
 -----END PGP SIGNATURE-----
