@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.172 2014/01/01 20:23:06 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.173 2014/01/01 20:23:57 radhermit Exp $
+
+  01 Jan 2014; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.95.ebuild,
+  -lilypond-2.17.96.ebuild, -lilypond-2.17.97.ebuild:
+  Remove old.
 
 *lilypond-2.18.0 (01 Jan 2014)
 
